--- a/app/src/main/res/layout/activity_gambar_android.xml
+++ b/app/src/main/res/layout/activity_gambar_android.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_gambar_android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:src="@drawable/dd"
+    android:src="@drawable/s"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
