--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/g"
     tools:context="linear.com.projectpertama.Home"
     android:orientation="vertical">
 <LinearLayout
@@ -16,64 +17,88 @@
     android:orientation="vertical">
 
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="Linear Layout Sederhana"
         android:id="@+id/LinearLayoutSederhana">
     </Button>
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="Linear Layout Relative"
         android:id="@+id/LinearLayoutRelative">
     </Button>
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="Linear Layout Table"
         android:id="@+id/LinearLayoutTable">
     </Button>
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="Menampilkan Gambar Android"
         android:id="@+id/GambarAndroid">
     </Button>
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="Teks Autocomplete"
         android:id="@+id/TextAutocomplete">
     </Button>
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="Kotak Dialog"
         android:id="@+id/KotakDialog">
     </Button>
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="Picker"
         android:id="@+id/Picker">
     </Button>
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="CheckBox"
         android:id="@+id/check">
     </Button>
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="Radio Button"
         android:id="@+id/radio">
     </Button>
     <Button
+        android:textColor="#000"
         android:layout_width="fill_parent"
         android:layout_height="55px"
         android:text="List View"
         android:id="@+id/list">
+    </Button>
+    <Button
+        android:textColor="#000"
+        android:layout_width="fill_parent"
+        android:layout_height="55px"
+        android:text="Call Activity "
+        android:id="@+id/activity_call">
+    </Button>
+    <Button
+        android:textColor="#000"
+        android:layout_width="fill_parent"
+        android:layout_height="55px"
+        android:text="Playing Audio"
+        android:id="@+id/play">
     </Button>
 </LinearLayout>
 </ScrollView>
