--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -107,5 +107,12 @@
         android:text="Kalkulator Berat Badan"
         android:id="@+id/activity_bmi">
     </Button>
+    <Button
+        android:textColor="#000"
+        android:layout_width="fill_parent"
+        android:layout_height="55px"
+        android:text="Web Wiew"
+        android:id="@+id/web">
+    </Button>
 </LinearLayout>
 </ScrollView>
